# comx-35f

./: .gitignore  .gitmodules  README.md  build.sbt  build.sc
Colorlight_I5V6_ECP5/: Makefile  pins.lpf
Colorlight_v8.0_ECP5/: Makefile  pins.lpf
UPduino3/: Makefile  run.sh  upduino.pcf
data/: move_shape.comx  si5153a_color.txt
fcomx-35_SDL/: .gitignore  CMakeLists.txt  comx_loader.cpp  comx_loader.h  crt.c  crt.h  crt_ntsc.h  debug.gtkw  debug_cpu.gtkw  debug_fdc.gtkw  main.cpp  output.map  run.sh  sim.cpp  sim.h  test.c
programmer/: .gitignore  CMakeLists.txt  main.c  main_.c  main_type.c
src/main/scala/Cards/: fdc.scala
src/main/scala/VIS/: CDP1869.scala  CDP1870.scala  CDP1871.scala
src/main/scala/comx35/: Config_ECP5.scala  Config_ice40.scala  PWM_Sound.scala  Top_ECP5.scala  Top_ice40.scala  comx35.scala  loader.scala  top.scala  top_ice40.scala
src/main/scala/new1802/: new1802.scala
